--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
+html {
+    background-color: aqua;
+}
+
+body {
+    height: 100vh;
+}
+
 button {
     border-radius: 5px;
+    width: 100px;
+    height: 50px;
     transition: all 0.05s;
+    background-color: rgb(219, 236, 63)
 }
 
 .playing {
     transform: scale(1.2);
-    box-shadow: 0 0 5px rgb(201, 201, 62);
+    box-shadow: 0 0 10px rgb(201, 201, 62);
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30%;
+    gap: 200px;
 }
