--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
     height: 100vh;
 }
 
+h1 {
+    display: flex;
+    justify-content: center;
+}
+
 button {
     border-radius: 5px;
     width: 100px;
@@ -23,6 +28,6 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 30%;
+    height: 15%;
     gap: 200px;
 }
